<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Welcome"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:paddingTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="45dp"
        android:paddingBottom="40dp" />

    <EditText android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        android:layout_gravity="center_horizontal"
        android:lines="1"
        android:singleLine="true"
        android:linksClickable="false" />

    <EditText android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="code"
        android:inputType="numberPassword"

        android:layout_gravity="center_horizontal"
        android:lines="1"
        android:singleLine="true"
        android:linksClickable="false" />

    <Button
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:text="@string/button_new"
        android:layout_gravity="center_horizontal"
        android:onClick="newExperiment"
        android:background="#ff00ffd3"
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/start" />

    <Button
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:text="@string/button_continue"
        android:layout_gravity="center_horizontal"
        android:onClick="continueExperiment"
        android:background="#ffe1ff18"
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/cont"
        android:visibility="invisible"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:text="@string/button_stop"
        android:layout_gravity="center_horizontal"
        android:onClick="stopExperiment"
        android:background="#ffff9500"
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/stop"
        android:visibility="invisible"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Routes v1.0"
            android:layout_gravity="left|bottom|center_horizontal"
            android:textSize="10dp"
            android:gravity="bottom"
            android:layout_marginBottom="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Author: Panos Mavros, UCL CASA"
            android:layout_gravity="left|center_horizontal"
            android:textSize="10dp" />
    </LinearLayout>

</LinearLayout>
